29 July 2005 Sylvain Pion
- Change assign() to object_cast<>().

8 March 2005 Sylvain Pion
- Add do_intersect(Triangle_3, Tetrahedron_3) by Nico Kruithof.

============================ CGAL 3.1 ========================

22 June 2004 Sylvain Pion
- Move code in order to please g++ 3.4.

17 April 2004 Andreas Fabri
- Global functions call functor call internal global function

15 Feb 2004 Sylvain Pion
- Add intersection(Plane_3, Plane_3, Plane_3). [bug#185]

02 Feb 2004 [rursu]
- fixes for gcc 3.4

1 Feb 2004 Sylvain Pion
- Remove "extern".

2.20 (24 Nov 2003) [af]
- moved file include/CGAL/intersections.h from package Intersections_2

2.19 (21 October 2003)
- new headers

2.18 (7 October 2003) [af]
- Removed  CGAL_CFG_NO_AUTOMATIC_TEMPLATE_INCLUSION and definitions in header file again

2.17 (4 October 2003) [af]
- Added definitions of functions from .C file to .h file
- Added maintainer

2.15 (18 September 2003) [af]
- Some testsuite files included the wrong header file

2.14 (15 September 2003) [af]
- Resubmission

2.13 (11 September 2003) [af]
- Some testsuite files included the wrong header file

2.12 (8 September 2003) [af]
- Switched to unconditional  #include <CGAL/intersection_3_1.C>
  as Sun and Sgi CC complain about undefined functions

2.11 (7 September 2003) [af]
- Added missing typenames

2.10 (4 September 2003) [af]
- Removed superfluous variable

2.9 (4 September 2003) [af]
- Towards an extensible kernel

2.8 (24 July 03) my
- fixed Triangle_3_Ray_3 intersections in parallell cases

2.7 (27 May 03) my
- fixed cgal_test so that it compiles and run triangle_other

2.6 (06 May 2003) MY
+ added Triangle_3 intersection tests

2.5 (28 September 2001)
+ Replaced Cartesian by Simple_cartesian

2.4.3 (2 March 2001)
+ Small fixes in test files.

2.4.2 (31 January 2001)
+ Small fix to satisfy MSVC (initialisation of const ref variables).
+ Replaced multiplications by wmult calls to optimize Cartesian case.

----
2.4.1 (29 January 2001)